fixed margin on tablet view

--- a/css/index.css
+++ b/css/index.css
@@ -282,7 +282,7 @@ nav .nav-links ul li:hover {
 }
 .home .content-section .text-content {
   width: 48%;
-  padding-right: 1%;
+  padding: 1%;
 }
 @media only screen and (max-width:600px) {
   .home .content-section .text-content {
@@ -335,7 +335,7 @@ nav .nav-links ul li:hover {
   padding-top: 30px;
   border-top: 2px dashed #c0c0c0;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 @media only screen and (max-width:600px) {
   .home .content-pick {
