--- a/less/home-page.less
+++ b/less/home-page.less
@@ -24,7 +24,7 @@
    
     .text-content {
       width: 48%;
-      padding-right: 1%;
+      padding: 1%;
       @media @mobile {
         width: 90%;
       }
@@ -81,7 +81,7 @@
     padding-top: 30px;
     border-top: 2px dashed @navigation-border;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     @media @mobile {
       flex-direction: column;
       align-items: center;
